fix: remove spacing above mobile hero image

--- a/src/assets/scss/layouts/home.scss
+++ b/src/assets/scss/layouts/home.scss
@@ -33,14 +33,13 @@
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-rows: auto auto;
-  grid-row-gap: 50px;
-  grid-column-gap: 70px;
+  column-gap: 70px;
   max-width: 1100px;
   margin: 0 auto;
 
   @media (min-width: 1024px) {
     grid-template-columns: 3fr 2fr;
-    grid-row-gap: 20px;
+    row-gap: 20px;
     margin: 50px auto;
   }
 }
@@ -64,14 +63,14 @@
 .hero__title {
   @media (min-width: 1024px) {
     margin-top: 0;
-    font-size: 3.3em;
+    font-size: 3em;
   }
 }
 
 .hero__body {
   margin-top: 0;
   margin-bottom: 1rem;
-  font-size: 1.3em;
+  font-size: 1.2em;
 
   > *:first-child {
     margin-top: 0;
